Add TapChangerBlockingAutomaton to TapChangerAutomaton connection
Signed-off-by: lisrte <laurent.issertial@rte-france.com>